--- a/app/globals.css
+++ b/app/globals.css
@@ -5,18 +5,20 @@
   margin: 0;
 }
 
+html {
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
+}
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
 }
-
 body {
-  /* background-color: #000000; */
-  background-image: linear-gradient(180deg, #000000 36.4%, #191E2A 100%);
+  background: #000;
+  /* background-image: linear-gradient(180deg, #000000 36.4%, #191E2A 100%); */
   color: #fff;
   font-weight: 400;
- 
 }
 
 a {
@@ -42,4 +44,12 @@ input {
 
 p {
   margin: 0;
+}
+
+.section {
+  height: 100vh;
+  scroll-snap-align: top;
+  scroll-snap-stop: normal;
+  /* scroll-margin-top: 100px; */
+  /* margin: 100px 0; */
 }
