--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -8,6 +8,7 @@
   background: -webkit-linear-gradient(90deg, rgba(181,62,164,1) 0%, rgba(252,111,50,1) 39%, rgba(255,74,89,1) 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  // margin-top: -100px;
   &:hover {
     background: -webkit-linear-gradient(90deg, rgba(255,214,249,1) 0%, rgba(255,203,180,1) 50%, rgba(255,190,195,1) 100%);
     -webkit-background-clip: text;
@@ -20,9 +21,9 @@
   font-size: 18px;
 }
 
-.button_container {
-  margin-bottom: 145px;
-}
+// .button_container {
+//   margin-bottom: 145px;
+// }
 
 @media screen and (min-width: 768px) {
   .title {
@@ -35,12 +36,18 @@
   .button_container {
     display: flex;
     align-items: center;
-    margin-bottom: 145px;
+    // margin-bottom: 145px;
     gap: 25px;
   }
 }
 @media screen and (min-width: 1200px) {
   .title {
     font-size: 128px;
+
+  }
+}
+@media screen and (min-width: 1800px) {
+  .title {
+    max-width: 1600px;
   }
 }
