--- a/components/StatsBlock/StatsBlock.module.scss
+++ b/components/StatsBlock/StatsBlock.module.scss
@@ -1,7 +1,7 @@
 @use '../../styles/common.module.scss';
 @use '../../styles/variables' as *;
 .container_stats {
-    margin-bottom: 200px;
+    margin: 50px 0 200px 0;
 }
 .stats_list {
     display: flex;
