--- a/components/Banner/Banner.module.scss
+++ b/components/Banner/Banner.module.scss
@@ -30,3 +30,11 @@
     background-position: top right;
     background-size: cover;
 }
+
+
+.moon_footer {
+    background-image: url(../../public/nasa.png);
+    background-position: bottom center;
+    background-size: cover;
+ 
+}
