--- a/app/globals.css
+++ b/app/globals.css
@@ -51,3 +51,17 @@ p {
   scroll-snap-align: start;
   scroll-snap-stop: always;
 }
+.example-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.grid-wrapper {
+  flex: 1 1 0px;
+  width: 100%;
+}
+
+#myGrid {
+  height: 100%;
+}
